fixed horizontal scroll bug

--- a/website/style.css
+++ b/website/style.css
@@ -3,7 +3,8 @@ html,body {
   width: 100%;
   margin:0;
   padding: 0;
-  font-family:'Montserrat'
+  font-family:'Montserrat';
+  overflow-x: hidden;
 }
 
 nav {
